force-app/main/default/objects/Case/fields/ATI_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>ATI_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the person at ATI primarily responsible for helping to resolve the case.</inlineHelpText>
    <label>ATI Main Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>