force-app/main/default/objects/Case/fields/Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Category__c</fullName>
    <label>Business Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable</fullName>
            </value>
            <value>
                <fullName>Accounts Payable</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Job Operations</fullName>
            </value>
            <value>
                <fullName>Other Departments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>