force-app/main/default/objects/Case/fields/Call_Counter__c.field-meta.xml
<CustomField>
    <fullName>Call_Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Call Counter</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>