force-app/main/default/objects/Case/fields/Case_Severity__c.field-meta.xml
<CustomField>
    <fullName>Case_Severity__c</fullName>
    <label>Case Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Accident/Injury</fullName>
            </value>
            <value>
                <fullName>2 - Warranty Claim</fullName>
            </value>
            <value>
                <fullName>3 - Customer Concern</fullName>
            </value>
            <value>
                <fullName>4 - Informational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>