force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Questions</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Confirmations</fullName>
            </value>
            <value>
                <fullName>Other Questions</fullName>
            </value>
            <value>
                <fullName>Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Purchase Authorizations</fullName>
            </value>
            <value>
                <fullName>Benefits Questions</fullName>
            </value>
            <value>
                <fullName>Other Employee Services</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
            <value>
                <fullName>Applicant Questions</fullName>
            </value>
            <value>
                <fullName>Information or Update Request</fullName>
            </value>
            <value>
                <fullName>Problems or Service Complaints</fullName>
            </value>
            <value>
                <fullName>Scheduling</fullName>
            </value>
            <value>
                <fullName>Warranty Question or Request</fullName>
            </value>
            <value>
                <fullName>Accident or Injury Report</fullName>
            </value>
            <value>
                <fullName>Job Site Deliveries</fullName>
            </value>
            <value>
                <fullName>Office Deliveries</fullName>
            </value>
            <value>
                <fullName>Media Inquiries/Public Relations</fullName>
            </value>
            <value>
                <fullName>Vendor Sales/Marketing</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>