force-app/main/default/objects/Case/fields/CKSW_BASE__SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>CKSW_BASE__SLAViolation__c</fullName>
    <label>SLA Violation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>