force-app/main/default/objects/Case/fields/Collector__c.field-meta.xml
<CustomField>
    <fullName>Collector__c</fullName>
    <formula>ATI_Job__r.Collector__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collector</label>
    <type>Text</type>
</CustomField>