force-app/main/default/objects/Case/fields/Courtesy_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Call_Date__c</fullName>
    <label>Courtesy Call Start Date</label>
    <type>DateTime</type>
</CustomField>