force-app/main/default/objects/Case/fields/Courtesy_Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Call_Outcome__c</fullName>
    <label>Courtesy Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disputed Invoice</fullName>
            </value>
            <value>
                <fullName>Left Message</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Sent Copy of Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>