force-app/main/default/objects/Case/fields/CRMG_EmailAtt__ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>CRMG_EmailAtt__ContactFirstName__c</fullName>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact First Name</label>
    <type>Text</type>
</CustomField>