force-app/main/default/objects/Case/fields/CRMG_EmailAtt__Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>CRMG_EmailAtt__Thread_Id__c</fullName>
    <formula>&apos;ref:&apos;&amp;LEFT($Organization.Id,4)&amp;LEFT(RIGHT($Organization.Id,7),4)&amp;&apos;.&apos;&amp;LEFT(Id,4)&amp;LEFT(RIGHT(Id,8),5)&amp;&apos;:ref&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Thread ID</label>
    <type>Text</type>
</CustomField>