force-app/main/default/objects/Case/fields/Daily_Update_Due__c.field-meta.xml
<CustomField>
    <fullName>Daily_Update_Due__c</fullName>
    <label>Daily Update Due</label>
    <type>DateTime</type>
</CustomField>