force-app/main/default/objects/Case/fields/Job_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Invoice_Number__c</fullName>
    <label>Job/Invoice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>