force-app/main/default/objects/Case/fields/Last_Courtesy_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Courtesy_Call__c</fullName>
    <label>Last Courtesy Call</label>
    <type>DateTime</type>
</CustomField>