force-app/main/default/objects/Case/fields/Last_Daily_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Daily_Update__c</fullName>
    <label>Last Daily Update</label>
    <type>DateTime</type>
</CustomField>