force-app/main/default/objects/Case/fields/Last_Violation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Violation_Date_Time__c</fullName>
    <label>Last Violation Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>