force-app/main/default/objects/Case/fields/Next_Action_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Date_Time__c</fullName>
    <label>Next Action Date/Time</label>
    <type>DateTime</type>
</CustomField>