force-app/main/default/objects/Case/fields/Next_Courtesy_Call_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Courtesy_Call_Due__c</fullName>
    <label>Next Courtesy Call Due</label>
    <type>DateTime</type>
</CustomField>