force-app/main/default/objects/Case/fields/PI_Delete__c.field-meta.xml
<CustomField>
    <fullName>PI_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Delete</label>
    <type>Checkbox</type>
</CustomField>