force-app/main/default/objects/Case/fields/PI_Disclose__c.field-meta.xml
<CustomField>
    <fullName>PI_Disclose__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PI Disclose</label>
    <type>Checkbox</type>
</CustomField>