force-app/main/default/objects/Case/fields/Proxy_Request__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proxy Request</label>
    <type>Checkbox</type>
</CustomField>