force-app/main/default/objects/Case/fields/Resolution_Type__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Type__c</fullName>
    <label>Resolution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved by Contact Center / Customer Service</fullName>
            </value>
            <value>
                <fullName>Discretionary Gift Card</fullName>
            </value>
            <value>
                <fullName>Resolved by ATI Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>