force-app/main/default/objects/Case/recordTypes/ATI_Alert.recordType-meta.xml
<RecordType>
    <fullName>ATI_Alert</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <label>ATI Alert</label>
</RecordType>