force-app/main/default/objects/Case/recordTypes/CCPA.recordType-meta.xml
<RecordType>
    <fullName>CCPA</fullName>
    <active>true</active>
    <businessProcess>CCPA</businessProcess>
    <label>CCPA</label>
</RecordType>