force-app/main/default/objects/Case/recordTypes/Collection_Cases.recordType-meta.xml
<RecordType>
    <fullName>Collection_Cases</fullName>
    <active>false</active>
    <businessProcess>Collection Cases Support Process</businessProcess>
    <label>Collection Cases (Inactive)</label>
</RecordType>