force-app/main/default/objects/Case/recordTypes/Contact_Center_Case.recordType-meta.xml
<RecordType>
    <fullName>Contact_Center_Case</fullName>
    <active>true</active>
    <businessProcess>Contact Center Support Process</businessProcess>
    <label>Service Cases</label>
</RecordType>