force-app/main/default/objects/Case/recordTypes/IT_Helpdesk_Case.recordType-meta.xml
<RecordType>
    <fullName>IT_Helpdesk_Case</fullName>
    <active>true</active>
    <businessProcess>IT Support Process</businessProcess>
    <label>IT Helpdesk Case</label>
</RecordType>