force-app/main/default/objects/Case/validationRules/Resolution_Type_Required_when_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Type_Required_when_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL(  Status  ,&quot;Closed&quot;), 
ISBLANK(TEXT(   Resolution_Type__c   )) 
)</errorConditionFormula>
    <errorDisplayField>Resolution_Type__c</errorDisplayField>
    <errorMessage>Resolution Type must be populated when Status is Closed</errorMessage>
</ValidationRule>