force-app/main/default/objects/Case/listViews/ATI_Alert_Case.listView-meta.xml
<ListView>
    <fullName>ATI_Alert_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ATI Alert</label>
    <queue>ATI_Alert</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>