force-app/main/default/objects/Case/listViews/Call_Center_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Call_Center_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Contact Center Queue</label>
    <queue>Call_Center_Queue</queue>
    <sharedTo>
        <role>Call_Center</role>
    </sharedTo>
</ListView>