force-app/main/default/objects/Case/listViews/CASE_Due_Today.listView-meta.xml
<ListView>
    <fullName>CASE_Due_Today</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Next_Action_Date_Time__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Cases - Next Action Due Today</label>
</ListView>