force-app/main/default/objects/Case/listViews/CCPA_Requests_Case.listView-meta.xml
<ListView>
    <fullName>CCPA_Requests_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CCPA Requests</label>
    <queue>CCPA_Requests</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>