force-app/main/default/objects/Case/listViews/Collection_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Collection_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Collection Cases</label>
    <queue>Collection_Cases</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>