force-app/main/default/objects/Case/listViews/Contact_Center_Collections_Cases_Case.listView-meta.xml
<ListView>
    <fullName>Contact_Center_Collections_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Contact Center - Collections Case Queue</label>
    <queue>Contact_Center_Collections_Case_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>