force-app/main/default/objects/Case/listViews/Customer_Service_Case.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Customer Service</label>
    <queue>Customer_Service</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>