force-app/main/default/objects/Case/listViews/Customer_Service_Queue.listView-meta.xml
<ListView>
    <fullName>Customer_Service_Queue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.SOURCE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Customer Service Queue</label>
    <queue>Customer_Service</queue>
</ListView>