force-app/main/default/objects/Case/listViews/Daily_Update_Due_Today_or_Overdue.listView-meta.xml
<ListView>
    <fullName>Daily_Update_Due_Today_or_Overdue</fullName>
    <columns>Daily_Update_Due__c</columns>
    <columns>Last_Daily_Update__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Daily_Update_Due__c</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Daily Update Due Today or Overdue</label>
</ListView>