force-app/main/default/objects/Case/listViews/My_Cases_Daily_Update_Due_Today.listView-meta.xml
<ListView>
    <fullName>My_Cases_Daily_Update_Due_Today</fullName>
    <columns>Daily_Update_Due__c</columns>
    <columns>Last_Daily_Update__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Daily_Update_Due__c</field>
        <operation>lessThan</operation>
        <value>TOMORROW</value>
    </filters>
    <label>My Cases - Daily Update Due Today</label>
</ListView>