force-app/main/default/objects/Case/listViews/National_Accounts_Case.listView-meta.xml
<ListView>
    <fullName>National_Accounts_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>National Accounts</label>
    <queue>National_Accounts</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>